--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="text_9">9</string>
     <string name="text_10">10</string>
     <string name="text_11">11</string>
+    <string name="text_title_setting">Основные настройки Калькулятора</string>
+    <string name="text_title_theme_setting">Выберите тему:</string>
+    <string name="text_title_formula_setting">Введите формулу для расчета</string>
 </resources>
