--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,27 @@
     <string name="text_title_formula_setting">Введите формулу для расчета</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_navigation_note_book">NavigationNoteBookActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="action_main">action_main</string>
+    <string name="new_menu_item_added">Добавить</string>
+    <string name="bottom_title_home">Главная</string>
+    <string name="bottom_title_favourite">Избранные</string>
+    <string name="bottom_title_add">Добавить</string>
+    <string name="popup_title_description">Открыть описание</string>
+    <string name="popup_title_update">Изменить</string>
+    <string name="popup_title_delete">Удалить</string>
+    <string name="popup_title_favourite">Добавить в Избранное</string>
+    <string name="popup_title_share">Поделиться</string>
+    <string name="toolbar_title_search">Поиск</string>
+    <string name="site_404">404. Страница в разработке</string>
 </resources>
