--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,13 @@
     <string name="popup_title_add_note">Добавить запись</string>
     <string name="text_update">Обновить</string>
     <string name="text_plus">+</string>
+
+    <string name="alert_dialog">Alert Dialog</string>
+    <string name="alert_title">Alert Title</string>
+    <string name="alert_message">Alert message</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="neutral">Stuff</string>
+    <string name="alert_title_delete">Вы действительно хотите удалить запись?</string>
+    <string name="attention">Внимание!</string>
 </resources>
